--- a/apps/extension/public/manifest.json
+++ b/apps/extension/public/manifest.json
@@ -3,8 +3,12 @@
   "description": "An extension to crawl web pages",
   "version": "1.0",
   "manifest_version": 3,
+  "icons": {
+    "32": "web-crawler.png"
+  },
   "action": {
-    "default_popup": "index.html",
-    "default_icon": "./app_icon.jpg"
-  } 
+    "default_popup": "index.html"
+  },
+  "permissions": ["activeTab", "scripting"],
+  "host_permissions": ["https://*/*", "http://*/*"]
 }
