--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -17,7 +17,17 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "node -r ts-node/register -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d src/utils/app_data_source.ts",
+    "typeorm:prod": "npx typeorm -d dist/database/data-source.js",
+    "migration:generate": "pnpm run typeorm migration:generate",
+    "migration:create": "pnpm run typeorm migration:create ",
+    "migration:run:dev": "NODE_ENV=development pnpm run typeorm migration:run",
+    "migration:run:prod": "pnpm run build && NODE_ENV=production pnpm run typeorm:prod migration:run",
+    "migration:revert:dev": "NODE_ENV=development pnpm run typeorm migration:revert",
+    "migration:revert:prod": "pnpm run build && NODE_ENV=production pnpm run typeorm:prod migration:revert",
+    "migration:show:dev": "NODE_ENV=development pnpm run typeorm migration:show",
+    "migration:show:prod": "pnpm run build && NODE_ENV=production pnpm run typeorm:prod migration:show"
   },
   "dependencies": {
     "@langchain/community": "^0.3.55",
@@ -28,9 +38,16 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/typeorm": "^11.0.0",
+    "@types/html-to-text": "^9.0.4",
+    "cherio": "1.0.0-rc.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "dotenv": "^17.2.2",
+    "html-to-text": "^9.0.5",
+    "langchain": "^0.3.33",
     "pg": "^8.16.3",
+    "pgvector": "^0.2.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.26",
