--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.12.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
