feat: docker compose and dockerfile

--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -1,25 +1,20 @@
 FROM node:20-alpine AS builder
 RUN apk update
-# Set working directory
 WORKDIR /app
-RUN npm install -g pnpm && npm add -g turbo
+RUN npm install -g pnpm turbo
 COPY . .
 RUN turbo prune server --docker
 
-# Add lockfile and package.json's of isolated subworkspace
 FROM node:20-alpine AS installer
 RUN apk update && npm install -g pnpm 
 WORKDIR /app
-
 COPY --from=builder /app/out/json/ .
 COPY --from=builder /app/turbo.json ./turbo.json
 RUN pnpm install
 
-
 FROM node:20-alpine AS sourcer
-WORKDIR /app 
-RUN npm install -g pnpm && npm add -g turbo
-
+WORKDIR /app
+RUN npm install -g pnpm turbo
 COPY --from=installer /app/ .
 COPY --from=builder /app/out/full/ .
 COPY .gitignore .gitignore
@@ -27,5 +22,6 @@ RUN pnpm run build
 
 FROM node:20-alpine as runner
 WORKDIR /app
+RUN npm install -g pnpm
 COPY --from=sourcer /app/ .
 CMD [ "node", "apps/server/dist/main.js" ]
